Fixed layout issues, other

--- a/AC-Control/Client/src/Styles/styles.scss
+++ b/AC-Control/Client/src/Styles/styles.scss
@@ -355,6 +355,7 @@ body {
 
         input {
             height: 27px;
+            width: 70px;
         }
 
         .sample {
